--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,4 +31,10 @@ html {
   button {
     @apply shadow-xl shadow-gray-400 rounded-xl uppercase bg-gradient-to-r from-[#5651e5] to-[#709dff] text-white
   }
+/* 
+  .img-custom {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  } */
 }
