build of the Next app

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -34,6 +34,7 @@ html {
   .image {
     object-fit: contain;
     width: 100% !important;
+    height: 100% !important;
     position: relative !important;
   }
 }
