--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,10 +31,24 @@ html {
   button {
     @apply shadow-xl shadow-gray-400 rounded-xl uppercase bg-gradient-to-r from-[#5651e5] to-[#709dff] text-white
   }
+
+  .card-project {
+    width: 350px;
+    height: 250px;
+    overflow: hidden;
+  }
   .image {
-    object-fit: contain;
+    object-fit: cover;
     width: 100% !important;
     height: 100% !important;
     position: relative !important;
   }
 }
+
+@media only screen and (min-width: 765px) {
+   .card-project {
+    width: 550px;
+    height: 350px;
+    overflow: hidden;
+  }
+} 
