--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -45,6 +45,11 @@ html {
   }
 }
 
+.link {
+  @apply text-[#5651e5] hover:text-[#628be5] transition-all duration-300 ease-in-out ms-2 text-sm 
+  hover:scale-110
+}
+
 @media only screen and (min-width: 765px) {
    .card-project {
     width: 550px;
